# rustate

./: Cargo.toml  ISSUE.md  README.md  RuState Specification.md  index.js  integration_tests.sh  package.json  shopping_cart.json  shopping_cart.proto  style.css
.github/workflows/: deploy-demo.yml
apps/agent/: Cargo.toml  README.md
apps/agent/src/: agent.rs  decision.rs  episode.rs  error.rs  feedback.rs  goal.rs  insight.rs  main.rs  observation.rs  policy.rs  state_machine.rs  storage.rs
apps/editor/: README.md  build.sh
apps/editor/examples/: basic.rs  index.html
apps/editor/src/: editor.rs  lib.rs  utils.rs
apps/editor/src/components/: canvas.rs  editor_panel.rs  toolbar.rs
apps/rustate/: Cargo.toml  README.md
apps/rustate-macros/: Cargo.toml
apps/rustate/examples/: actor_basic.rs  hierarchical.rs  traffic_light.rs  xstate_test_example.rs
apps/rustate/examples/integration/: combined_demo.rs
apps/rustate/rustate/src/: guard.rs
apps/rustate/src/: action.rs  actor.rs  codegen.rs  event.rs  guard.rs  lib.rs  logic.rs  machine.rs  simple_counter.rs  state.rs  transition.rs  wasm.rs
apps/rustate/src/integration/: mod.rs
apps/rustate/src/integration/context_sharing/: mod.rs
apps/rustate/src/integration/event_forwarding/: mod.rs
apps/rustate/src/integration/hierarchical/: mod.rs
apps/rustate_core/: Cargo.toml
apps/rustate_core/src/: actor_ref.rs  system.rs
apps/rustate_core/src/integration/event_forwarding/: mod.rs
apps/rustate_obsolete/: README.md
apps/rustate_obsolete/src/: lib.rs  transition.rs
apps/rustate_obsolete/src/integration/context_sharing/: mod.rs
apps/rustate_obsolete/src/test/: xstate.rs
crates/agent/: Cargo.toml  README.md
crates/agent/src/: agent.rs  decision.rs  episode.rs  error.rs  feedback.rs  goal.rs  insight.rs  lib.rs  observation.rs  policy.rs  storage.rs
crates/demo/: Cargo.toml  README.md  Trunk.toml  index.html  serve.sh  styles.scss
crates/demo/src/: lib.rs  main.rs
crates/editor/: Cargo.toml
crates/editor/examples/: basic.rs
crates/editor/src/: editor.rs  layout.rs  lib.rs  utils.rs
crates/editor/src/components/: app.rs  canvas.rs  editor_panel.rs  mod.rs  properties_panel.rs  toolbar.rs
crates/editor/www/: index.html
crates/grpc/: Cargo.toml
crates/grpc/examples/: server.rs  traffic_light_client.rs
crates/grpc/src/: converter.rs  error.rs
crates/grpc/src/client/: typesafe.rs
crates/grpc/src/proto/: statemachine.proto
crates/grpc/src/server/: service.rs
crates/integration/: Cargo.toml  README.md
crates/integration/examples/: combined_demo.rs
crates/integration/src/: error.rs  lib.rs
crates/integration/src/context_sharing/: mod.rs
crates/integration/src/event_forwarding/: mod.rs
crates/integration/src/hierarchical/: mod.rs
crates/rustate/: Cargo.toml  README.md  build.rs
crates/rustate-grpc/: Cargo.toml  README.md  build.rs
crates/rustate-grpc/examples/: server.rs  traffic_light_client.rs  typesafe_client.rs
crates/rustate-grpc/examples/integration/: combined_demo.rs
crates/rustate-grpc/src/: converter.rs  error.rs  lib.rs
crates/rustate-grpc/src/client/: mod.rs  transport.rs  typesafe.rs
crates/rustate-grpc/src/server/: mod.rs  service.rs
crates/rustate/examples/: actor_basic.rs  hierarchical.rs  model_based_testing.rs  property_based_testing.rs  traffic_light.rs  xstate_compat.rs  xstate_proto.rs  xstate_test_example.rs
crates/rustate/examples/integration/: combined_demo.rs
crates/rustate/src/: action.rs  actor.rs  codegen.rs  context.rs  error.rs  event.rs  guard.rs  lib.rs  machine.rs  state.rs  transition.rs  wasm.rs
crates/rustate/src/integration/: error.rs  mod.rs
crates/rustate/src/integration/context_sharing/: mod.rs
crates/rustate/src/integration/event_forwarding/: mod.rs
crates/rustate/src/integration/hierarchical/: mod.rs
crates/rustate/src/machine.rs crates/rustate/src/: wasm.rs
crates/rustate/src/proto/: converter.rs  mod.rs  xstate_machine.proto
crates/rustate/src/test/: checker.rs  generator.rs  mod.rs  property.rs  runner.rs  xstate.rs
crates/rustate_core/: Cargo.toml
crates/rustate_core/src/: actor.rs  actor_ref.rs  lib.rs  logic.rs  simple_counter.rs  spawn.rs  system.rs
crates/rustate_macros/: Cargo.toml
crates/rustate_macros/src/: lib.rs
crates/rustate_obsolete/examples/: actor_basic.rs
crates/rustate_obsolete/src/: context.rs
crates/rustate_obsolete/src/test/: property.rs
docs/: xstate_v5_alignment_spec.md
examples/: hierarchical.rs  traffic_light.rs
issues/: 01.md
pkg/: package.json  rstate.js
rustate/: Cargo.toml  README.md
rustate/crates/rstate_core/: Cargo.toml
rustate/crates/rstate_core/src/: lib.rs
rustate/crates/rstate_visualizer/: Cargo.toml
rustate/crates/rstate_visualizer/src/: lib.rs
rustate/crates/rstate_visualizer/static/: index.html
src/: action.rs  error.rs  guard.rs  lib.rs  machine.rs  transition.rs  wasm.rs
web/: Cargo.toml  README.md  Trunk.toml  debug.html  direct-test.html  docs.html  index.html  index.js  rebuild-wasm.sh  style.css
web/src/: lib.rs  main.rs
web/static/: rstate.d.ts  rstate_bg.wasm  rstate_bg.wasm.d.ts
