[workspace]
resolver = "2"
members = [
    "crates/rustate_core",
    "crates/rustate_macros",
    "crates/agent",
    "crates/editor",
    # "crates/demo", // Temporarily excluded due to API incompatibility
]

[workspace.package]
authors = ["Jun Kawasaki"]
repository = "https://github.com/jun784/rustate"
documentation = "https://docs.rs/rustate"
license = "MIT"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
  "console", "Document", "Element", "HtmlElement", 
  "Node", "Window", "HtmlButtonElement", "Event"
]}
console_error_panic_hook = { version = "0.1.7" }
async-trait = "0.1"
tokio = { version = "1.38.0", features = ["full"] }
rand = "0.8"
tracing = "0.1"
proptest = "1.2"
chrono = "0.4"
