[package]
name = "rustate-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly demo for RuState statechart library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustate = { path = "../crates/rustate", features = ["wasm"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "HtmlButtonElement",
  "Event"
]

[features]
default = ["wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s" 