[package]
name = "rustate"
version = "0.3.0"
edition = "2021"
authors = ["jun784"]
description = "A Rust library for creating and managing state machines, inspired by XState."
license = "MIT"
repository = "https://github.com/jun784/rustate"
readme = "README.md"
keywords = ["statemachine", "statechart", "xstate", "actor", "async"]
categories = ["concurrency", "asynchronous", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"], optional = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

# Actor system dependencies (potentially optional)
# Example: Riker (consider alternatives or making this generic)
# riker = { version = "0.5", optional = true }

# MBT dependencies (optional)
proptest = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Codegen dependencies (optional)
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
# rsty-fork = "0.3.0"
tempfile = "3"
pretty_assertions = "1.4.0"

[features]
default = ["codegen"]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:getrandom",
    "dep:uuid",
    "uuid/js"
]
integration = []
integration_async = []
codegen = []
mbt = []
property-testing = ["mbt", "dep:proptest"]
xstate-compat = []