[package]
name = "rustate"
version = "0.3.0"
edition = "2021"
authors = ["jun784"]
description = "A Rust library for creating and managing state machines, inspired by XState."
license = "MIT"
repository = "https://github.com/jun784/rustate"
readme = "README.md"
keywords = ["statemachine", "statechart", "xstate", "actor", "async"]
categories = ["concurrency", "asynchronous", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"], optional = true }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
futures = "0.3"
log = "0.4"
async-recursion = "1.0"

# Actor system dependencies (potentially optional)
# Example: Riker (consider alternatives or making this generic)
# riker = { version = "0.5", optional = true }

# MBT dependencies (optional)
proptest = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Codegen dependencies (optional)
syn = { version = "2.0", optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
# rsty-fork = "0.3.0"
tempfile = "3"
pretty_assertions = "1.4.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["codegen", "wasm"]
codegen = ["dep:syn", "dep:quote", "dep:proc-macro2", "dep:serde_json"]
proto = ["dep:prost", "dep:prost-types", "tokio"]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "uuid/js",
]
mbt = []
property-testing = ["mbt", "dep:proptest"]
xstate-compat = []

# Remove target-specific dependencies sections unless strictly necessary
# for platform-specific code outside of features.