[package]
name = "rustate"
version = "0.3.0"
edition = "2021"
authors = ["Jun Kawasaki"]
description = "A Rust library for creating and managing state machines, inspired by XState."
license = "MIT"
repository = "https://github.com/jun784/rustate"
readme = "README.md"
keywords = ["statemachine", "xstate", "statechart", "state", "fsm"]
categories = ["algorithms", "data-structures", "development-tools"]


[lib]
crate-type = ["cdylib", "rlib"] # Add "rlib" for testing and Rust usage

[features]
# By default both halves are enabled, preserving backward compatibility.
default = ["state", "actor"]

# Core state-machine / statechart functionality (XState-style), usable on its own
# without pulling in the actor runtime. Only needs Tokio's `sync` primitives
# (used by guards/actions/transitions for the shared context lock).
state = ["serde_json", "tokio", "tokio/sync"]

# Actor-model runtime (actor system, mailboxes, spawning). This is what pulls in
# the heavier Tokio runtime (`rt-multi-thread`, `macros`). Independent of `state`.
actor = ["tokio", "tokio/sync", "tokio/rt-multi-thread", "tokio/macros"]

codegen = ["state", "syn", "quote", "proc-macro2", "serde_json"]
xstate-compat = ["state", "serde_json"]
mbt = []
property-testing = ["proptest", "rand"]
wasm = ["state", "wasm-bindgen", "js-sys", "console_error_panic_hook", "serde-wasm-bindgen", "wasm-bindgen-futures"] # Add serde-wasm-bindgen and wasm-bindgen-futures
proto = ["codegen", "prost", "prost-types"]
# Integration patterns build on top of the state machine layer.
integration = ["state"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true } # Keep optional for feature consistency, but default enables it
async-trait = "0.1"
tokio = { version = "1", default-features = false, optional = true } # Tokio sub-features are selected per crate feature (`state` -> sync, `actor` -> full runtime)
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0" # Added for error handling convenience
either = "1.9" # Added for Either type
itertools = "0.12" # Added for iterator helpers
log = "0.4" # Add log dependency
async-recursion = "1.0" # Add async-recursion dependency

# Codegen feature deps
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"], optional = true } # Enable full and parsing features
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

# Proto feature deps
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }

# WASM feature deps
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true } # Add serde-wasm-bindgen
wasm-bindgen-futures = { version = "0.4", optional = true } # Add wasm-bindgen-futures

# Property testing feature deps
proptest = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true, features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"], optional = true } # Needed for rand on wasm

[dev-dependencies]
# Testing general
criterion = "0.5" # For benchmarking (optional)
proptest = "1.0" # For property-based testing
proptest-derive = "0.4" # Derive macro for proptest
tokio = { version = "1", features = ["full"] } # Full tokio features for tests
cucumber = "0.19" # BDD testing
futures = "0.3"
tempfile = "3" # For creating temporary files/dirs in tests

# MBT specific (if needed)
# graphwalker = "..."

# WASM testing
wasm-bindgen-test = "0.3"
# futures-lite = "1.13" # Might be needed for some async WASM tests

# Mocking
mockall = "0.12" # Mocking library

# Codegen testing deps (if any special ones needed)

# Example specific
# Add dependencies used ONLY in examples here if any

# [[bench]]
# name = "machine_benchmark"
# harness = false


# Optional: Specify profiles for better control
[profile.release]
lto = true
codegen-units = 1
panic = "abort" # Consider "abort" for release builds if panics are unrecoverable

[profile.test]
opt-level = 0 # Faster test compilation

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false


# Build dependencies (if any, e.g., for code generation)
[build-dependencies]
# prost-build = { version = "0.12", optional = true } # If using prost build script