[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "State-machine-powered LLM agents using rustate"
repository = "https://github.com/your-username/rustate"
license = "MIT"
readme = "README.md"

[dependencies]
rustate = { path = "../rustate" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.34", features = ["full", "test-util"] } 