[package]
name = "rustate-demo"
version = "0.1.0"
edition.workspace = true
description = "A demo page for Rustate state machines"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["statecharts", "statemachine", "demo", "wasm", "webassembly"]
categories = ["gui", "visualization", "wasm", "web-programming"]

[dependencies]
rustate = { path = "../rustate", features = ["wasm"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures = "0.4"
gloo = "0.10"
log = "0.4"
wasm-logger = "0.2"
uuid = { workspace = true } 