[package]
name = "rustate-editor"
version = "0.1.0"
edition.workspace = true
description = "A WebAssembly-based editor for Rustate state machines"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["statecharts", "statemachine", "editor", "wasm", "webassembly"]
categories = ["gui", "visualization", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustate = { version = "0.2.6" }
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures = "0.4"
yew = { version = "0.21", features = ["csr"] }
gloo = "0.10"
wee_alloc = { version = "0.4", optional = true }
uuid = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]