[package]
name = "rustate-grpc"
version = "0.1.0"
edition = "2021"
description = "gRPC interface for RuState state machine library"
authors.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["statecharts", "statemachine", "grpc", "network", "remote"]
categories = ["network-programming", "web-programming", "api-bindings"]

[dependencies]
rustate = { version = "0.2.4", features = ["mbt", "property-testing"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []
# クライアント側機能のみを提供
client = []
# サーバー側機能のみを提供
server = []
# クライアントとサーバー両方の機能を提供
full = ["client", "server"] 