[package]
name = "rustate-integration"
version = "0.1.0"
edition = "2021"
description = "Cross-crate integration patterns for RuState"
authors.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
rustate = { path = "../rustate" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = []
async = ["tokio", "async-trait"] 