[package]
name = "rustate-grpc"
version = "0.1.0"
edition = "2021"
description = "gRPC interface for RuState state machine library"
authors.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
rustate = { path = "../rustate", features = ["mbt"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []
client = []
server = []
full = ["client", "server"] 