[package]
name = "rustate"
version = "0.2.6"
edition = "2021"
authors = ["junkawasaki"]
description = "A Rust library for creating and managing state machines, inspired by XState."
license = "MIT OR Apache-2.0"
repository = "https://github.com/junkawasaki/rustate"
readme = "README.md"
keywords = ["statemachine", "statechart", "xstate", "actor", "async"]
categories = ["concurrency", "asynchronous", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
async-recursion = "1.0"
futures = "0.3"
tracing = "0.1"
# Added wasm-bindgen-futures
wasm-bindgen-futures = "0.4"

# Optional dependencies for features
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook"]
integration = []
integration_async = ["integration", "tokio/sync"]
codegen = []
mbt = []
property-testing = ["mbt"]

[dev-dependencies]
proptest = "1.0"
