[package]
name = "rustate_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true # このクレートが手続き型マクロを含むことを示す

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] } # Rustコードの解析
quote = "1.0" # Rustコードの生成
proc-macro2 = "1.0" # proc_macro API の改善版

# 必要に応じて rustate_core の型を参照する場合があるが、
# proc-macro クレートは依存を最小限に保つのが一般的。
# 代わりに生成コード内で core:: を使うか、必要な型情報を直接埋め込む。
# rustate_core = { path = "../rustate_core" } 