[package]
name = "rustate_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust_fsm = { version = "0.7.0", default-features = false, features = ["dsl"] }
rustate = "0.4" # Use rustate instead 